--- a/react-client/index.html
+++ b/react-client/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
   <title>learn</title>
-  <script src="/bundle.js" ></script>
+
 </head>
 <body>
-  <h1>is it working?</h1>
+  <h1>Korean-English word game</h1>
   <div id="mount"></div>
+  <script src="/bundle.js" ></script>
 </body>
 </html>
